[package]
name = "blue-crab-shells"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]
name = "bluecrab"
path = "src/lib.rs"

[[bin]]
name = "bluecrab"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.30.7"
whoami = "1.5.1"
windows = { version = "0.54.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_SystemServices", "Win32_System_Console", "Win32_Security", "Win32_System_Memory", "Win32_System_Threading", "Win32_System_WindowsProgramming", "Win32_System_Diagnostics_Debug", "Win32_System_ProcessStatus", "Wdk_System_SystemServices"] }
winreg = "0.52.0"

[profile.release]
opt-level = 3
strip = true
